css/map.css
:root 
{
	--cbs-color-accentH: #1d86b1;
	--cbs-color-accentR: 29,134, 177;
	--cbs-border-accent: 3px double rgba(0,0,0,.3);
	/*https://css-tricks.com/books/volume-i/scale-typography-screen-size/*/
	/* --- font-size --*/
	--cbs-font-size-site-name: calc(29px + (35 - 29) * ((100vw - 300px) / (1600 - 300))); /*22pt*/
	--cbs-font-size-marker-title: calc(26px + (32 - 26) * ((100vw - 300px) / (1600 - 300))); /*20pt*/
	--cbs-font-size-normal: calc(16px + (22 - 16) * ((100vw - 300px) / (1600 - 300))); /*12pt*/
	--cbs-font-size-site-tagline: calc(13px + (19 - 13) * ((100vw - 300px) / (1600 - 300))); /*10pt*/
	--cbs-font-size-the-fine-print: calc(11px + (17 - 11) * ((100vw - 300px) / (1600 - 300))); /*8pt*/
	/* --- line-height --*/
	--cbs-line-height-site-name: calc(31px + (37 - 31) * ((100vw - 300px)/(1600 - 300)));
	--cbs-line-height-marker-title: calc(28px + (34 - 28) * ((100vw - 300px) / (1600 - 300)));
	--cbs-line-height-normal: calc(18px + (24 - 18) * ((100vw - 300px) / (1600 - 300)));
	--cbs-line-height-site-tagline: calc(15px + (21 - 15) * ((100vw - 300px) / (1600 - 300)));
	--cbs-line-height-the-fine-print: calc(13px + (19 - 13) * ((100vw - 300px) / (1600 - 300)));
}
/* --------------------------------------------------------------------------- */
/* SITE STRUCTURE for RESPONSIVE LAYOUT                                        */
/* --------------------------------------------------------------------------- */
/* adapted from http://codepen.io/HugoGiraudel/pen/qIAwr/ */

html, body 
{
	padding: 0px;
	margin: 0px;
	height: 100vh;
	width: 100%;
}

body 
{
	display: flex;
	flex-flow: row wrap;
	font-size: var(--cbs-font-size-normal);
	line-height: var(--cbs-line-height-normal);
	background-color: white;
}

body > * 
{
	flex: 1 100%;
	padding: 0px;
	margin: 0px;
}

#header 
{
	background: #b3b7d2;
	display: table;
	width: 100%;
	color: rgba(var(--cbs-color-accentR),.5);
	text-align: center;
	background-color: white;
	border-bottom: var(--cbs-border-accent);
}

.siteIcon,
.siteInfo,
.siteBackmatter 
{
	display: table-cell;
	border: 10px solid transparent;
	text-align: center;
	vertical-align: middle;
}

.siteIcon img 
{
	height: 35px
}

.siteName 
{
	font-weight: bold;
	font-size: var(--cbs-font-size-site-name);
	line-height: var(--cbs-line-height-site-name);
	display: inline;
}

.siteTagline 
{
	font-style: italic;
	font-size: var(--cbs-font-size-site-tagline);
	line-height: var(--cbs-line-height-site-tagline);
	display: inline;
}

.siteBackmatter 
{
	font-size: var(--cbs-font-size-the-fine-print);
	line-height: var(--cbs-line-height-the-fine-print);
	justify-self: end;
	margin-right: 15px;
}

#content 
{
	display: flex;
	flex-flow: row wrap;
	height: 100%;
}

panel 
{
	min-width: 400px;
}

.mapPanel 
{
}

#map 
{
	height: 100%;
	width: 100%;
}

#map img 
{
	text-align: center;
	vertical-align: middle;
}

.sidePanel 
{
	flex: 1;
	overflow-y: auto;
}

.sidePanel > * 
{
	padding: 0px;
}

.markerInfo 
{
	padding: 0px;
	background-color: rgba(243,243,243,.3);
	box-shadow: inset 7px 0 9px -7px rgba(0,0,0,.3);
}

.filterOptions 
{
	padding: 0px;
	background-color: rgba(243,243,243,.3);
	box-shadow: inset -7px 0 9px -7px rgba(0,0,0,.3);
}

@media all and (min-width: 600px) 
{
	.sidePanel 
	{
		flex: 1 0 0;
	}
}

@media all and (min-width: 950px) 
{
	.mapPanel 
	{
		flex: 3 0px;
	}	

	.filterOptions 
	{
		order: 1;
	}

	.mapPanel 
	{
		order: 2;
	}

	.markerInfo 
	{
		order: 3;
	}

}

/* --------------------------------------------------------------------------- */
/* GENERAL */

.disabled {
	color: #CCCCCC;
}

.visited {
	color: green;
}

.oneVisited {
	color: #FF8000; /* rgb(255,128,0)*/
}

li 
{
	padding: 5px 0px 5px 0px;
}

a, a:visited, a:hover, a:active 
{
	color: rgba(var(--cbs-color-accentR),.8);
	font-weight: bold;
	text-decoration: none;
}

input[type='checkbox'] 
{
	float: left;
	width: 20px;
}

input[type='checkbox'] + label 
{
	display: block;
	white-space: nowrap;
	width: 100px;
}

#markerInfoContainer, #instructionsContainer, .markerShelfIcons, .markerQuickFacts, .filterOption 
{
	display: table;
	width: 100%;
	border-bottom: 1px solid rgba(0,0,0,.3);
}

.markerQuickFact, .filterItem 
{
	display: table-row;
	margin: 3px;
	border-bottom: 1px solid #eaeaea;
}

.panelCloseButton, .sidePanelHeader, .sidePanelCloseButton, .markerIcon, .markerTitle, #markerPlanWithFurkot, .markerShelfIcon, .markerQuickFactLabel, .markerQuickFactData, .filterHeader, .filterIcon, .filterText, .filterCount 
{
	display: table-cell;
	padding: 3px;
	align-self: center;
	justify-self: center;
}

.sidePanelHeaderContainer 
{
	width: 100%;
	display: grid;
	grid-template-columns: 1fr 50px;
	font-weight: bold;
	text-align: center;
	background-color: rgba(204,204,204,.3);
	border-bottom: var(--cbs-border-accent);
}

.disclaimer 
{
	font-style: italic;
	margin: 10px 25px 10px 20px;
}

.filterOption 
{
	padding: 0px;
	margin: 0px;
}

.filterHeader, .filterIcon, .filterText, .filterCount 
{
	text-align: center;
	vertical-align: middle;
	border-bottom: 1px solid #eaeaea;
}

.odd 
{
	background-color: rgba( 234, 234, 234, .5);
}

.filterIcon 
{
	width: 25px;
}

.filterIcon img 
{
	width: 25px;
}

.filterText 
{
	font-size: var(--cbs-font-size-the-fine-print);
	line-height: var(--cbs-line-height-the-fine-print);
}

.filterHeader 
{
	font-style: italic;
}


.markerHeader 
{
	display: grid;
	grid-template-columns: 47px 1fr 100px;
	padding-top: 5px;
	font-weight: bold;
	background-color: rgba(204,204,204,.3);
	border-bottom: var(--cbs-border-accent);
}

.markerTitle 
{
	font-size: var(--cbs-font-size-marker-title);
	line-height: var(--cbs-line-height-marker-title);
	text-align: center;
}

.markerShelfIcon 
{
	text-align: center;
}

#markerData 
{
	border-bottom: var(--cbs-border-accent);
}

.markerQuickFactLabel 
{
	font-style: italic;
	text-align: left;
}

.markerQuickFactData 
{
	text-align: left;
}

.markerNotes 
{
	padding-top: 10px;
	padding-bottom: 10px;
	margin: 0px 10px 0px 0px;
}

#markerInfoContainer 
{
	display: none;
}

#markerPlanWithFurkot 
{
	text-align: right;
}

.instructionsText, .markerIcon, .markerQuickFactLabel, .markerNotes {
	padding-left: 15px;
}

#toggleInstructions 
{
	margin-top: 15px;
	cursor: pointer;
	font-size: var(--cbs-font-size-the-fine-print);
	line-height: var(--cbs-line-height-the-fine-print);
	width: 100%;
	text-align: center;
}

.tldr 
{
	border: 1px solid --cbs-color-accentH;
	background: rgba(255,128, 0,.3);
	padding: 10px;
	text-align: center;
	margin-bottom: 5px;
}

#instructionsContainer 
{
	border-bottom: 3px double rgba(0,0,0,.3);
}

.instructionsText 
{
	padding-top: 15px;
	padding-bottom: 15px;
	margin: 0px 10px 0px 0px;
	font-size: var(--cbs-font-size-the-fine-print);
	line-height: var(--cbs-line-height-the-fine-print);
}

.routeWaypointType 
{
	font-size: var(--cbs-font-size-the-fine-print);
	line-height: var(--cbs-line-height-the-fine-print);
}

#svgIcon 
{
	width: 100%;
	text-align: center;
}

.weatherCurrent 
{
	font-size: 15px;
	line-height: 17px;
}

.weatherTemps table 
{
	width: 100%;
}

.weatherTemps th,
.weatherTemps td 
{
	text-align: center;
	font-size: 13px;
	line-height: 15px;
	padding: 0px;
}

.weatherTemps th 
{
	background-color: #f9f9f9;
}

.weatherSun 
{
	font-size: 15px;
	line-height: 17px;
}

.quotes 
{
	font-size: var(--cbs-font-size-the-fine-print);
	line-height: var(--cbs-line-height-the-fine-print);
	padding: 5px;
	margin-right: 10px;
}

.quoteText 
{
	padding-bottom: 5px;
	padding-top: 5px;
}

.quoteText::before 
{
	font-family: "Font Awesome 5 Free";
	content: "\f10d";
	color: #9A1F32;
	margin-right: .5em;
	font-weight: 900;
}

.quoteAttribution 
{
	font-style: italic;
}

.quoteAttribution::before 
{
	font-family: "Font Awesome 5 Free";
	content: "\f101";
	color: #CCCCCC;
	margin-left: .5em;
	margin-right: .3em;
	font-weight: 900;
}

/* GOOGLE MAP CUSTOM CONTROLS */

[class^="control-"] 
{
	display: flex;
	align-items: center;
	background-color: #fff;
	border: 2px solid #fff;
	/*border-radius: 3px;*/
	box-shadow: 0 2px 6px rgba(0,0,0,.3);
	cursor: pointer;
	font-size: large;
}

#currentLocationInfoContainer 
{
	display: grid;
	grid-template-columns: 35px 1fr 35px;
	box-shadow: 0 2px 6px rgba(0,0,0,.3);
	cursor: pointer;
	min-height: 29px;
	margin-left: 10px;
	margin-bottom: 3px;
	padding: 5px;
	font-size: larger;
	text-align: center;
	color: #9c9c9c;
	background: rgba(255,255,255, 0.7);
}

.controlActive 
{
	background: rgba(0,128,0, 0.7);
	color: rgba(255,255,255, 0.8);
}

.controlInactive 
{
	background: rgba(255,255,255, 0.5);
	color: #CCCCCC;
}

.control-text 
{
	color: rgb(25,25,25);
	font-family: Roboto,Arial,sans-serif;
	font-size: 16px;
	line-height: 38px;
	padding-left: 5px;
	padding-right: 5px;
}

.control-traffic, .control-incidents
{
	margin-top: 10px;
	margin-left: 10px;
	text-align: left;
	padding: 10px 15px 10px 15px;
}

.control-zoom, .control-reset 
{
	margin-top: 5px;
	margin-right: 11px;
	text-align: center;
	background: rgba(255,255,255, 0.5);
}

.control-zoom 
{
	padding: 9px;
}

.control-reset 
{
	padding: 8px;
}

.control-filter, .control-visited, .control-notvisited, .control-showAll, .control-hideAll, .control-routes 
{
	margin-left: 10px;
	margin-bottom: 3px;
	text-align: left;
	vertical-align: middle;
	padding: 0px;
}

.control-routes 
{
	padding: 8px 5px 10px 6px;
	text-align: center;
}

.control-visited, .control-notvisited, .control-showAll, .control-hideAll 
{
	margin-bottom: 6px;
}

.control-test, .control-clustering 
{
	border: none;
	margin-left: 10px;
	margin-bottom: 3px;
	text-align: center;
	padding: 6px 8px 8px 8px;
	height: 25px;
}

.control-clustering img 
{
	width: 22px;
}

.routeUseInfo 
{
	margin-top: 15px;
}

.routeUseInfo img 
{
	max-width: 90%;
}

.poiVisited, .poiSomeday, .poiUnknown, .poiOne 
{
	background: #000000;
	font-weight: bold;
	border-radius: 5px;
	text-align: center;
	padding: 3px;
	font-size: 12px;
	color: rgba(255,255,255,1);
	border: 1px solid rgba(255,255,255,.5);
}

.poiVisited 
{
	background: rgb(0,128,0,.5);
}

.poiOne 
{
	background: rgba(255,128, 0,.5);
}

.poiSomeday 
{
	background: rgba(0,0,255,.5);
}

/*FURKOT INTEGRATION */

[class^="ff-icon-"] 
{
	color: black;
	border: 1px solid #CCCCCC;
	font-size: 30px;
}

.ff-icon-furkot, .ff-icon-furkot a 
{
	color: black;
	border: 1px solid CCCCCC;
	background-color: green; /* For browsers that do not support gradients */
	background-image: linear-gradient(green, white); /* Standard syntax (must be last) */
}

.furkot-widget-done::before 
{
	display: inline-block;
	color: white;
	background: black;
	cursor: pointer;
	padding: .5em;
	border: none;
	font-size: 16px;
	text-decoration: none;
}

.furkot-widget-done 
{
	visibility: hidden;
	cursor: pointer;
}

.furkot-widget-done.furkot-widget-active::before 
{
	content: 'x';
	position: absolute;
	left: 50%;
	margin-left: 136px;
	top: 50%;
	margin-top: -216px;
	visibility: visible;
	border: white solid 1px;
	-moz-border-radius: 15px;
	border-radius: 16px;
	height: 8px;
	line-height: 6px;
}

.furkot-widget.furkot-widget-active 
{
	position: fixed;
	top: 0;
	left: 0;
	opacity: 1;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, 0.75);
	-webkit-transition: opacity 300ms;
	transition: opacity 300ms;
	z-index: 500;
}

.furkot-widget-inactive iframe 
{
	width: 0;
	height: 0;
}

.furkot-widget-active iframe 
{
	position: absolute;
	width: 300px;
	left: 50%;
	margin-left: -150px;
	height: 400px;
	top: 50%;
	margin-top: -200px;
}

/* load last */

.isVisible {
	display: block !important;
}

.isNotVisible {
	display: none !important;
}

